feat: add upcoming races

--- a/index.html
+++ b/index.html
@@ -3,12 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/cssStrip.css">
+    <link rel="stylesheet" href="./css/hero.css">
+    <link rel="stylesheet" href="./css/upcomingRaces.css">
     <title>Document</title>
 </head>
 <body>
     <main class="content">
-        This is a webpage
+        <section class="hero-container">
+            <!-- <img class="hero-img" src="./images/hero.jpg"> -->
+            <h1 class="title">Formula 1</h1>
+        </section>
+        <section>
+            <h2 class="title">Upcoming Races</h2>
+            <div class="upcoming-races-container">
+                <div class="upcoming-races-flex">
+                    <div class="upcoming-race">
+                        <h4>Bahrain</h4>
+                        <p>26-28 March</p>
+                    </div>
+                    <div class="upcoming-race">
+                        <h4>Italy</h4>
+                        <p>16-18 April</p>
+                    </div>
+                    <div class="upcoming-race">
+                        <h4>TBC</h4>
+                        <p>30-02 May</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
