--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
             </div>
         </section>
         <section class="modal">
-            <span class="close-btn">&times;</span>
-            <div class="modal-content">
+            <div class="modal-content content">
+                <span class="modal-close-btn">&times;</span>
                 <!-- Maybe insert here through JS? -->
                 <img class="modal-track-layout" />
             </div>
