--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia"> -->
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./css/cssStrip.css">
     <link rel="stylesheet" href="./css/hero.css">
@@ -37,10 +38,14 @@
             </div>
         </section>
         <section class="modal">
-            <div class="modal-content content">
+            <div class="modal-container content">
                 <span class="modal-close-btn">&times;</span>
-                <!-- Maybe insert here through JS? -->
-                <img class="modal-track-layout" />
+                <!-- Insert img/content through js -->
+                <div class="modal-content">
+                    <h2 class="modal-title"></h2>
+                    <img class="modal-track-layout" />
+
+                </div>
             </div>
         </section>
     </main>
