--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia"> -->
-    <link rel="stylesheet" href="./css/index.css">
+    <!-- <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./css/cssStrip.css">
     <link rel="stylesheet" href="./css/hero.css">
     <link rel="stylesheet" href="./css/upcomingRaces.css">
-    <link rel="stylesheet" href="./css/modal.css">
+    <link rel="stylesheet" href="./css/modal.css"> -->
+    <link rel="stylesheet" href="./css/main.css">
     <title>Document</title>
 </head>
 <body>
