feat: add call to weather api

--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
                 <div class="modal-content">
                     <h2 class="modal-title"></h2>
                     <img class="modal-track-layout" />
-
+                    <div class="modal-weather">
+                        <h4>Current Weather</h4>
+                        <p class="modal-temp"></p>
+                    </div>
                 </div>
             </div>
         </section>
