--- a/index.html
+++ b/index.html
@@ -38,7 +38,15 @@
                 <!-- Insert img/content through js -->
                 <div class="modal-content">
                     <h2 class="modal-title"></h2>
-                    <img class="modal-track-layout" />
+                    <div class="flex-row">
+                        <img class="modal-track-layout" />
+                        <div class="modal-track-layout-info">
+                            <p class="modal-race-circuit modal-track-info"></p>
+                            <p class="modal-race-length"></p>
+                            <p class="modal-race-laps"></p>
+                            <p class="modal-race-race-distance"></p>
+                        </div>
+                    </div>
                     <div class="modal-weather">
                         <h4>Current Weather</h4>
                         <p class="modal-temp"></p>
