fix: move index to root

--- a/index.html
+++ b/index.html
@@ -70,6 +70,6 @@
         </section>
     </main>
     <script>var exports = {};</script>
-    <script src="main.js"></script>
+    <script src="./dist/main.js"></script>
 </body>
 </html>
