feat: Add second story

--- a/index.html
+++ b/index.html
@@ -36,14 +36,22 @@
         </div>
         <section class="articles full-width">
             <h2>News Stories</h2>
-            <div class="story">
-                <img src="../images/Stories/sebVet.jpg">
-                <div class="story-content">
-                    <h4>News</h4>
-                    <p>Vettel on track for Aston Martin for the first time, as he and Stroll shakedown AMR21 at Silverstone</p>
+            <div class="stories">
+                <div class="story">
+                    <img src="../images/Stories/sebVet.jpg">
+                    <div class="story-content">
+                        <h4>News</h4>
+                        <p>Vettel on track for Aston Martin for the first time, as he and Stroll shakedown AMR21 at Silverstone</p>
+                    </div>
+                </div>
+                <div class="story">
+                    <img src="../images/Stories/mickShu.jpg">
+                    <div class="story-content">
+                        <h4>News</h4>
+                        <p>Schumacher name provides motivation not pressure, says Mick ahead of F1 debut</p>
+                    </div>
                 </div>
             </div>
-
         </section>
         <section class="modal">
             <div class="modal-container content">
